Bug 1856196 - prefers-reduced-motion look and feel settings are initialized on linux. r=botond

The prefers-reduced-motion settings must be initialized before the value
is requested. If EnsureInit() has not been called before the
prefers-reduced-motion value is evaluated, we may return an unexpected
value of false.

Differential Revision: https://phabricator.services.mozilla.com/D192475