widget/gtk/nsLookAndFeel.cpp
@@ -950,6 +950,7 @@ nsresult nsLookAndFeel::NativeGetInt(IntID aID, int32_t& aResult) {
       aResult = mCSDReversedPlacement;
       break;
     case IntID::PrefersReducedMotion: {
+      EnsureInit();
       aResult = mPrefersReducedMotion;
       break;
     }
